<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/juaspm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="50dp"
                android:layout_height="50dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/nama1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/nama" />
                <TextView
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="Juas Ruhiyat Akbar"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/prodi5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prodi" />
                <TextView
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/teknik_informatika_a"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/nim4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="NIM" />
                <TextView
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="200602010"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/alamat3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/alamat" />

                <TextView
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/masbagik_selatan"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/hoby2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Hoby" />
                <TextView
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/belajar_amp_membaca"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>